--- a/default.htm
+++ b/default.htm
@@ -2573,7 +2573,7 @@
             <div class="container-fluid account-container" id="account-shuttoo">
               <div class="account-box">
                 <h3 class="text-primary">MISS CONSTANCE SHONTS </h3>
-                <p class="text-danger text-small" > <i class="fa fa-warning"></i> Account Locked</p>
+                <p class="text-success text-small" > <i class="fa fa-lightbulb-o"></i> Active</p>
 
                 <div class="row">
                   <div class="col-xs-6">
@@ -2702,7 +2702,7 @@
                                Linns Jewellery
                              </div>
                              <div class="col-xs-3 text-success">
-                               5,200,000.00
+                               10,000.00
                              </div>
                            </div>
                            <hr>
@@ -2731,7 +2731,7 @@
                               Zales, Ltd
                             </div>
                             <div class="col-xs-3 text-danger">
-                              201,550.00
+                              1,550.00
                             </div>
                           </div>
 
@@ -2799,7 +2799,7 @@
                                Conwell J.P, Ltd
                             </div>
                             <div class="col-xs-3 text-success">
-                              200,120.00
+                              20,120.00
                             </div>
                           </div>
 
@@ -2816,7 +2816,7 @@
                                Burj & Sons, Ltd
                              </div>
                              <div class="col-xs-3 text-danger">
-                               325,100.00
+                               32,100.00
                              </div>
                            </div>
                            <hr>
@@ -3121,7 +3121,7 @@
                               Marcus Auto, Ltd
                             </div>
                             <div class="col-xs-3 text-danger">
-                              350,000.00
+                              35,000.00
                             </div>
                           </div>
 
@@ -3155,7 +3155,7 @@
                               Greatwalls, Ltd
                             </div>
                             <div class="col-xs-3 text-success">
-                              253,320.00
+                              53,320.00
                             </div>
                           </div>
 
@@ -3224,7 +3224,7 @@
                               Morgan Cole, Realty
                             </div>
                             <div class="col-xs-3 text-success">
-                              510,965.00
+                              51,965.00
                             </div>
                           </div>
 
@@ -3373,7 +3373,7 @@
                               Brosnahan Insurance, Agency
                             </div>
                             <div class="col-xs-3 text-success">
-                              353,000.00
+                              35,000.00
                             </div>
                           </div>
 
@@ -3442,7 +3442,7 @@
                               Morgan Cole, Realty
                             </div>
                             <div class="col-xs-3 text-danger">
-                              510,965.00
+                              51,965.00
                             </div>
                           </div>
 
@@ -3557,7 +3557,7 @@
                               Eftars Engineering PVT, Ltd
                             </div>
                             <div class="col-xs-3 text-danger">
-                              450,000.00
+                              45,000.00
                             </div>
                           </div>
 
@@ -3711,7 +3711,7 @@
                               C Mollan: Salary
                             </div>
                             <div class="col-xs-3 text-danger">
-                              650,120.00
+                              65,120.00
                             </div>
                           </div>
 
@@ -3775,7 +3775,7 @@
                               Trailblazer IT, Ltd
                             </div>
                             <div class="col-xs-3 text-danger">
-                              350,000.00
+                              35,000.00
                             </div>
                           </div>
 
@@ -3792,7 +3792,7 @@
                               Lawson Properties, Inc
                             </div>
                             <div class="col-xs-3 text-danger">
-                              655,350.00
+                              65,350.00
                             </div>
                           </div>
 
@@ -3809,7 +3809,7 @@
                               Claire Bank, CM
                             </div>
                             <div class="col-xs-3 text-success">
-                              703,100.00
+                              70,100.00
                             </div>
                           </div>
 
@@ -3843,7 +3843,7 @@
                               Marcus Auto, Ltd
                             </div>
                             <div class="col-xs-3 text-danger">
-                              158,000.00
+                              15,000.00
                             </div>
                           </div>
 
@@ -3861,7 +3861,7 @@
                               RFS, Consulting
                             </div>
                             <div class="col-xs-3 text-danger">
-                              220,000.00
+                              20,000.00
                             </div>
                           </div>
 
@@ -3878,7 +3878,7 @@
                               Morgan Cole, Realty
                             </div>
                             <div class="col-xs-3 text-success">
-                              360,965.00
+                              36,965.00
                             </div>
                           </div>
 
@@ -3993,7 +3993,7 @@
                               R Greig Appliance, Ltd
                             </div>
                             <div class="col-xs-3 text-danger">
-                              250,000.00
+                              20,000.00
                             </div>
                           </div>
 
@@ -4079,7 +4079,7 @@
                               Attnetia Secretariat, SOCI
                             </div>
                             <div class="col-xs-3 text-danger">
-                              408,320.00
+                              40,320.00
                             </div>
                           </div>
 
@@ -4096,7 +4096,7 @@
                               Morgan Cole, Realty
                             </div>
                             <div class="col-xs-3 text-success">
-                              110,965.00
+                              10,965.00
                             </div>
                           </div>
 
@@ -4164,7 +4164,7 @@
                                TLC Corp
                              </div>
                              <div class="col-xs-3 text-danger">
-                               250,220.00
+                               25,220.00
                              </div>
                            </div>
 
@@ -4429,7 +4429,7 @@
                               Marcus Auto, Ltd
                             </div>
                             <div class="col-xs-3 text-danger">
-                              350,000.00
+                              35,000.00
                             </div>
                           </div>
 
@@ -4446,7 +4446,7 @@
                               George Roosevelt, Ltd
                             </div>
                             <div class="col-xs-3 text-success">
-                              600,250.00
+                              6,250.00
                             </div>
                           </div>
 
@@ -4460,7 +4460,7 @@
                               18/08/09
                             </div>
                             <div class="col-xs-3">
-                              Claire Bank, CM
+                              Claire Banks, CM
                             </div>
                             <div class="col-xs-3 text-success">
                               25,120.00
@@ -4532,7 +4532,7 @@
                               C Mollan Salary
                             </div>
                             <div class="col-xs-3 text-success">
-                              510,965.00
+                              51,965.00
                             </div>
                           </div>
 
@@ -4600,7 +4600,7 @@
                                Lawson Properties Inc
                              </div>
                              <div class="col-xs-3 text-danger">
-                               350,220.00
+                               35,220.00
                              </div>
                            </div>
 
@@ -4630,7 +4630,7 @@
                               Michaels, Consultant
                             </div>
                             <div class="col-xs-3 text-danger">
-                              350,000.00
+                              3,000.00
                             </div>
                           </div>
 
@@ -4647,7 +4647,7 @@
                               Transfer(**879)
                             </div>
                             <div class="col-xs-3 text-danger">
-                              350,000.00
+                              3,000.00
                             </div>
                           </div>
 
@@ -4681,7 +4681,7 @@
                               R Greig Appliance, Ltd
                             </div>
                             <div class="col-xs-3 text-danger">
-                              130,320.00
+                              13,320.00
                             </div>
                           </div>
 
@@ -4698,7 +4698,7 @@
                               IN JP Subsidiary Inc
                             </div>
                             <div class="col-xs-3 text-danger">
-                              201,320.00
+                              21,320.00
                             </div>
                           </div>
 
@@ -4715,7 +4715,7 @@
                               Michaels, Consultant
                             </div>
                             <div class="col-xs-3 text-danger">
-                              100,850.00
+                              10,850.00
                             </div>
                           </div>
 
@@ -4733,7 +4733,7 @@
                               Charkalis Chiropractic
                             </div>
                             <div class="col-xs-3 text-danger">
-                              310,320.00
+                              10,320.00
                             </div>
                           </div>
 
@@ -4767,7 +4767,7 @@
                               Automated Credit
                             </div>
                             <div class="col-xs-3 text-success">
-                              480,500.00
+                              80,500.00
                             </div>
                           </div>
 
@@ -4784,7 +4784,7 @@
                               Transfer ("*590")
                             </div>
                             <div class="col-xs-3 text-danger">
-                              400,820.00
+                              4,820.00
                             </div>
                           </div>
 
@@ -4987,11 +4987,33 @@
                     <div class="spinner-border text-primary hide" id="loader-acc-shuttoo" role="status">
                       <span class="sr-only">Loading...</span>
                     </div>
-                    <button data-toggle="modal" data-target=".stunnamodal" class="btn btn-success continuebtn" id="transferCon-btn-castyyy" type="button" name="button">click here to continue</button>
+                    <button data-toggle="modal" data-target=".stunnamodal" class="btn btn-success continuebtn" id="transferCon-btn-shuttoo" type="button" name="button">click here to continue</button>
                   </div>
 
+                  <script type="text/javascript">
+                  $("#transferbtn-shuttoo").click(function(){
+                    if ($("#bankname-txt-shuttoo").val() !="" && $("#receivername-txt-shuttoo").val() !="" && $("#accountnumber-txt-shuttoo").val() !="") {
+                      if (isNaN($("#amount-txt-shuttoo").val())) {
+                        alert("Please enter correct figure");
+                      } else {
+                        // WARNING: SECURITY LOCK CONTROL PRANK''
+                        $("#transferbtn-shuttoo  ").hide();
+                        $("#loader-acc-shuttoo").show();
+                        setTimeout(function(){
+                          $("#loader-acc-shuttoo").hide();
+                          $("#transferCon-btn-shuttoo").show();
+                        },3000);
+                      }
+                    } else {
+                      $("#blank-warning-txt-shuttoo").show();
+                      setTimeout(function(){
+                        $("#blank-warning-txt-shuttoo").hide();
+                      },2000);
 
+                    }
+                  });
 
+                  </script>
 
                 </div>
 
@@ -5032,7 +5054,7 @@
 
                     </div>
                     <div class="modal-body">
-                      <div class="transaction-processing-shuttoo" id="transaction-processing-castyyy" style="text-align: center">
+                      <div class="transaction-processing-shuttoo" id="transaction-processing-shuttoo" style="text-align: center">
                         <h3>Please wait, your transaction is processing...</h3>
                         <img src="img/loader-modal.gif" style="width: 30%;" alt="">
 
