--- a/default.htm
+++ b/default.htm
@@ -2639,7 +2639,7 @@
                                04/06/19
                              </div>
                              <div class="col-xs-3 text-warning">
-                               Victor A. lewis
+                               Victor A. Lewis
                              </div>
                              <div class="col-xs-3 text-warning">
                                20,000.00
