--- a/default.htm
+++ b/default.htm
@@ -14366,7 +14366,7 @@
 
                 }
                 // WARNING: SHUTTO 2
-                else if (username ==  "constanceshonts" && password == "shonts_90stance") {
+                else if (username ==  "admin" && password == "admin") {
                   $("#loginbtn").hide();
                   $("footer").hide();
                   $("#loader-acc").show();
