--- a/default.htm
+++ b/default.htm
@@ -5130,7 +5130,7 @@
             <div class="container-fluid account-container" id="account-evanns">
               <div class="account-box">
                 <h3 class="text-primary">MR DAVID GLOVER</h3>
-                <p class="text-warning text-small" > <i class="fa fa-warning"></i> Inactive</p>
+                <p class="text-success text-small" > <i class="fa fa-lightbulb-o"></i> Active</p>
 
                 <div class="row">
                   <div class="col-xs-6">
@@ -5138,7 +5138,7 @@
                     <p>007-895-412-3245</p>
                   </div>
                   <div class="col-xs-6">
-                    <h4 class="text-success"><i class="fa fa-gbp"></i> 1,298,730. <small class="text-success">50</small></h4>
+                    <h4 class="text-success"><i class="fa fa-gbp"></i> 459,177. <small class="text-success">39</small></h4>
                     <p> <small>Available balance</small> </p>
                   </div>
                 </div>
@@ -5149,7 +5149,7 @@
                     <p>VISA *3245</p>
                   </div>
                   <div class="col-xs-6">
-                    <h4 class="text-success"><i class="fa fa-gbp"></i> 1,020. <small class="text-success">20</small>  </h4>
+                    <h4 class="text-success"><i class="fa fa-gbp"></i> 120. <small class="text-success">20</small>  </h4>
                     <p> <small>As at 13:39 on 01/06/19</small> </p>
                   </div>
                 </div>
@@ -5188,6 +5188,36 @@
                       <div id="collapseOne" class="collapse show" data-parent="#accordion">
                         <div class="card-body">
                            <!-- WARNING: transaction********* -->
+                           <div class="row">
+                             <div class="col-xs-3">
+                               <i class="fa fa-clock-o text-warning"></i>
+                             </div>
+                             <div class="col-xs-3">
+                               26/06/19
+                             </div>
+                             <div class="col-xs-3">
+                               Gwendolyn E Henderson
+                             </div>
+                             <div class="col-xs-3 text-warning">
+                               3,256.61
+                             </div>
+                           </div>
+                           <hr>
+                           <div class="row">
+                             <div class="col-xs-3">
+                               <i class="fa fa-clock-o text-warning"></i>
+                             </div>
+                             <div class="col-xs-3">
+                               26/06/19
+                             </div>
+                             <div class="col-xs-3">
+                               Mashrook Gold, Company
+                             </div>
+                             <div class="col-xs-3 text-warning">
+                               950,000.00
+                             </div>
+                           </div>
+                           <hr>
                            <div class="row">
                              <div class="col-xs-3">
                                <i class="fa fa-arrow-right text-success"></i>
