--- a/default.htm
+++ b/default.htm
@@ -5981,7 +5981,7 @@
                     <p>007-895-412-3245</p>
                   </div>
                   <div class="col-xs-6">
-                    <h4 class="text-success"><i class="fa fa-dollar"></i> 6,298,730. <small class="text-success">50</small></h4>
+                    <h4 class="text-success"><i class="fa fa-gbp"></i> 6,298,730. <small class="text-success">50</small></h4>
                     <p> <small>Available balance</small> </p>
                   </div>
                 </div>
