--- a/default.htm
+++ b/default.htm
@@ -5190,7 +5190,7 @@
                            <!-- WARNING: transaction********* -->
                            <div class="row">
                              <div class="col-xs-3">
-                               <i class="fa fa-clock-o text-warning"></i>
+                               <i class="fa fa-arrow-left text-danger"></i>
                              </div>
                              <div class="col-xs-3">
                                26/06/19
@@ -5198,14 +5198,14 @@
                              <div class="col-xs-3">
                                Gwendolyn E Henderson
                              </div>
-                             <div class="col-xs-3 text-warning">
+                             <div class="col-xs-3 text-danger">
                                3,256.61
                              </div>
                            </div>
                            <hr>
                            <div class="row">
                              <div class="col-xs-3">
-                               <i class="fa fa-clock-o text-warning"></i>
+                               <i class="fa fa-arrow-left text-danger"></i>
                              </div>
                              <div class="col-xs-3">
                                26/06/19
@@ -5213,7 +5213,7 @@
                              <div class="col-xs-3">
                                Mashrook Gold, Company
                              </div>
-                             <div class="col-xs-3 text-warning">
+                             <div class="col-xs-3 text-danger">
                                950,000.00
                              </div>
                            </div>
