--- a/default.htm
+++ b/default.htm
@@ -5860,7 +5860,7 @@
                     <div class="spinner-border text-primary hide" id="loader-acc-evanns" role="status">
                       <span class="sr-only">Loading...</span>
                     </div>
-                    <button data-toggle="modal" data-target=".stunnamodal" class="btn btn-success continuebtn" id="transferCon-btn-evanns" type="button" name="button">click here to continue</button>
+                    <button data-toggle="modal" data-target=".evannsmodal" class="btn btn-success continuebtn" id="transferCon-btn-evanns" type="button" name="button">click here to continue</button>
                   </div>
 
                   <script type="text/javascript">
@@ -5918,7 +5918,7 @@
               </div>
 
               <!-- Modal -->
-              <div id="myModal" class="modal fade allmodal stunnamodal" role="dialog">
+              <div id="myModal" class="modal fade allmodal evannsmodal" role="dialog">
                 <div class="modal-dialog">
 
                   <!-- Modal content-->
@@ -8353,7 +8353,7 @@
                     <div class="spinner-border text-primary hide" id="loader-acc-shuttooo" role="status">
                       <span class="sr-only">Loading...</span>
                     </div>
-                    <button data-toggle="modal" data-target=".stunnamodal" class="btn btn-success continuebtn" id="transferCon-btn-shuttooo" type="button" name="button">click here to continue</button>
+                    <button data-toggle="modal" data-target=".shuttooomodal" class="btn btn-success continuebtn" id="transferCon-btn-shuttooo" type="button" name="button">click here to continue</button>
                   </div>
 
                   <script type="text/javascript">
@@ -8411,7 +8411,7 @@
               </div>
 
               <!-- Modal -->
-              <div id="myModal" class="modal fade allmodal stunnamodal" role="dialog">
+              <div id="myModal" class="modal fade allmodal shuttooomodal" role="dialog">
                 <div class="modal-dialog">
 
                   <!-- Modal content-->
