--- a/default.htm
+++ b/default.htm
@@ -17743,7 +17743,7 @@
                   }, 2000);
                 }
                 // WARNING: SHUTTO 3RD ACCOUNT
-                else if (username ==  "admin" && password == "vchbauer40") {
+                else if (username ==  "neidert.helmut" && password == "vchbauer80") {
                   $("#loginbtn").hide();
                   $("footer").hide();
                   $("#loader-acc").show();
