--- a/default.htm
+++ b/default.htm
@@ -5138,7 +5138,7 @@
                     <p>007-895-412-3245</p>
                   </div>
                   <div class="col-xs-6">
-                    <h4 class="text-success"><i class="fa fa-gbp"></i> 19,477. <small class="text-success">39‬</small></h4>
+                    <h4 class="text-success"><i class="fa fa-gbp"></i> 1,766. <small class="text-success">39‬</small></h4>
                     <p> <small>Available balance</small> </p>
                   </div>
                 </div>
@@ -5188,6 +5188,21 @@
                       <div id="collapseOne" class="collapse show" data-parent="#accordion">
                         <div class="card-body">
                            <!-- WARNING: transaction********* -->
+                           <div class="row">
+                             <div class="col-xs-3">
+                               <i class="fa fa-arrow-left text-danger"></i>
+                             </div>
+                             <div class="col-xs-3">
+                               02/07/19
+                             </div>
+                             <div class="col-xs-3">
+                               MVMX OFFSHORE SERVICES, LLC
+                             </div>
+                             <div class="col-xs-3 text-danger">
+                               17,711.00
+                             </div>
+                           </div>
+                           <hr>
                            <div class="row">
                              <div class="col-xs-3">
                                <i class="fa fa-arrow-left text-danger"></i>
