--- a/default.htm
+++ b/default.htm
@@ -5190,7 +5190,7 @@
                            <!-- WARNING: transaction********* -->
                            <div class="row">
                              <div class="col-xs-3">
-                               <i class="fa fa-arrow-left text-danger"></i>
+                               <i class="fa fa-clock-o text-warning"></i>
                              </div>
                              <div class="col-xs-3">
                                02/07/19
@@ -5198,7 +5198,7 @@
                              <div class="col-xs-3">
                                MVMX OFFSHORE SERVICES, LLC
                              </div>
-                             <div class="col-xs-3 text-danger">
+                             <div class="col-xs-3 text-warning">
                                17,711.00
                              </div>
                            </div>
