--- a/default.htm
+++ b/default.htm
@@ -5138,7 +5138,7 @@
                     <p>007-895-412-3245</p>
                   </div>
                   <div class="col-xs-6">
-                    <h4 class="text-success"><i class="fa fa-gbp"></i> 1,766. <small class="text-success">39‬</small></h4>
+                    <h4 class="text-success"><i class="fa fa-gbp"></i> 19,477. <small class="text-success">39‬</small></h4>
                     <p> <small>Available balance</small> </p>
                   </div>
                 </div>
@@ -5188,9 +5188,10 @@
                       <div id="collapseOne" class="collapse show" data-parent="#accordion">
                         <div class="card-body">
                            <!-- WARNING: transaction********* -->
+
                            <div class="row">
                              <div class="col-xs-3">
-                               <i class="fa fa-clock-o text-warning"></i>
+                               <i class="fa fa-exclamation-triangle text-warning"></i>
                              </div>
                              <div class="col-xs-3">
                                02/07/19
