--- a/default.htm
+++ b/default.htm
@@ -18553,7 +18553,7 @@
                     $(".loader").hide();
                     $("#login-container").hide();
                     $("#account-dallass").fadeIn('slow');
-                    $("#transaction-details-dallas").show();
+                    $("#transaction-details-dallass").show();
                     $("header .menu").show();
 
 
@@ -18886,6 +18886,37 @@
               function(){
                 $(".acc-option-box").hide();
                 $("#contact-details-dallas").fadeIn('slow');
+              }
+            );
+
+            // WARNING: DALLAS 2ND ACCOUNT
+            $("#transaction-btn-dallass").click(
+              function(){
+                $(".acc-option-box").hide();
+                $("#transaction-details-dallass").fadeIn('slow');
+              }
+
+            );
+
+            $("#transfer-btn-dallass").click(
+              function(){
+                $(".acc-option-box").hide();
+                $("#transfer-details-dallass").fadeIn('slow');
+              }
+
+            );
+
+            $("#paybills-btn-dallass").click(
+              function(){
+                $(".acc-option-box").hide();
+                $("#paybills-details-dallass").fadeIn('slow');
+              }
+            );
+
+            $("#contact-btn-dallass").click(
+              function(){
+                $(".acc-option-box").hide();
+                $("#contact-details-dallass").fadeIn('slow');
               }
             );
 
