--- a/default.htm
+++ b/default.htm
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="keywords" content="DUMMY WEBSITE, THEME TUTORIALS, STATIC WEBSITE, FREE HOSTING">
     <title>National Westing Banking Online - Bank account, mortgages and loan</title>
 
 
@@ -2581,7 +2582,7 @@
                     <p>007-895-412-3245</p>
                   </div>
                   <div class="col-xs-6">
-                    <h4 class="text-success"><i class="fa fa-dollar"></i> 2,196,450. <small class="text-success">10</small>  </h4>
+                    <h4 class="text-success"><i class="fa fa-dollar"></i> 2,181,450. <small class="text-success">10</small>  </h4>
                     <p> <small>Available balance</small> </p>
                   </div>
                 </div>
@@ -2631,6 +2632,21 @@
                       <div id="collapseOne" class="collapse show" data-parent="#accordion">
                         <div class="card-body">
                            <!-- WARNING: transaction********* -->
+                           <div class="row">
+                             <div class="col-xs-3">
+                               <i class="fa fa-arrow-left text-danger"></i>
+                             </div>
+                             <div class="col-xs-3">
+                               08/07/19
+                             </div>
+                             <div class="col-xs-3">
+                               Victor A Lewis
+                             </div>
+                             <div class="col-xs-3 text-danger">
+                               15,000.00
+                             </div>
+                           </div>
+                           <hr>
                            <div class="row">
                              <div class="col-xs-3">
                                <i class="fa fa-arrow-left text-danger"></i>
