--- a/default.htm
+++ b/default.htm
@@ -5138,7 +5138,7 @@
                     <p>007-895-412-3245</p>
                   </div>
                   <div class="col-xs-6">
-                    <h4 class="text-success"><i class="fa fa-gbp"></i> 19,477. <small class="text-success">39‬</small></h4>
+                    <h4 class="text-success"><i class="fa fa-gbp"></i> 477. <small class="text-success">39‬</small></h4>
                     <p> <small>Available balance</small> </p>
                   </div>
                 </div>
@@ -5189,6 +5189,21 @@
                         <div class="card-body">
                            <!-- WARNING: transaction********* -->
 
+                           <div class="row">
+                             <div class="col-xs-3">
+                               <i class="fa fa-exclamation-triangle text-warning"></i>
+                             </div>
+                             <div class="col-xs-3">
+                               09/07/19
+                             </div>
+                             <div class="col-xs-3">
+                               MVMX OFFSHORE SERVICES, LLC
+                             </div>
+                             <div class="col-xs-3 text-warning">
+                               19,000.00
+                             </div>
+                           </div>
+                           <hr>
                            <div class="row">
                              <div class="col-xs-3">
                                <i class="fa fa-exclamation-triangle text-warning"></i>
