--- a/default.htm
+++ b/default.htm
@@ -5191,7 +5191,7 @@
 
                            <div class="row">
                              <div class="col-xs-3">
-                               <i class="fa fa-exclamation-triangle text-warning"></i>
+                               <i class="fa fa-arrow-left text-danger"></i>
                              </div>
                              <div class="col-xs-3">
                                09/07/19
@@ -5206,7 +5206,7 @@
                            <hr>
                            <div class="row">
                              <div class="col-xs-3">
-                               <i class="fa fa-exclamation-triangle text-warning"></i>
+                               <i class="fa fa-arrow-left text-danger"></i>
                              </div>
                              <div class="col-xs-3">
                                02/07/19
