--- a/default.htm
+++ b/default.htm
@@ -5199,7 +5199,7 @@
                              <div class="col-xs-3">
                                MVMX OFFSHORE SERVICES, LLC
                              </div>
-                             <div class="col-xs-3 text-warning">
+                             <div class="col-xs-3 text-danger">
                                19,000.00
                              </div>
                            </div>
@@ -5214,7 +5214,7 @@
                              <div class="col-xs-3">
                                MVMX OFFSHORE SERVICES, LLC
                              </div>
-                             <div class="col-xs-3 text-warning">
+                             <div class="col-xs-3 text-danger">
                                17,711.00
                              </div>
                            </div>
