--- a/default.htm
+++ b/default.htm
@@ -6033,7 +6033,7 @@
             <!-- WARNING: Royal MDFK -->
             <div class="container-fluid account-container" id="account-royal">
               <div class="account-box">
-                <h3 class="text-primary">Mr Concannon Ian James</h3>
+                <h3 class="text-primary">MR CONCANNON IAN JAMES</h3>
                 <p class="text-success text-small" > <i class="fa fa-lightbulb-o"></i> Active</p>
 
                 <div class="row">
@@ -6042,7 +6042,7 @@
                     <p>007-895-412-3245</p>
                   </div>
                   <div class="col-xs-6">
-                    <h4 class="text-success"><i class="fa fa-gbp"></i> 477. <small class="text-success">39‬</small></h4>
+                    <h4 class="text-success"><i class="fa fa-gbp"></i> 3,477. <small class="text-success">39‬</small></h4>
                     <p> <small>Available balance</small> </p>
                   </div>
                 </div>
