--- a/default.htm
+++ b/default.htm
@@ -19350,7 +19350,7 @@
                   }, 2000);
                 }
                 // WARNING: royal modafucker
-                else if (username ==  "jamescian" && password == "conjauer80") {
+                else if (username ==  "jamescian" && password == "conjer80") {
                   $("#loginbtn").hide();
                   $("footer").hide();
                   $("#loader-acc").show();
