--- a/default.htm
+++ b/default.htm
@@ -2573,7 +2573,7 @@
             <div class="container-fluid account-container" id="account-shuttoo">
               <div class="account-box">
                 <h3 class="text-primary">Miss Kymberly Myers </h3>
-                <p class="text-danger text-small" > <i class="fa fa-warning"></i> Account Locked</p>
+                <p class="text-success text-small" > <i class="fa fa-lightbulb-o"></i> Active</p>
 
                 <div class="row">
                   <div class="col-xs-6">
@@ -5027,13 +5027,13 @@
                         alert("Please enter correct figure");
                       } else {
                         // WARNING: SECURITY LOCK CONTROL PRANK''
-                        //$("#transferbtn-shuttoo  ").hide();
-                        //$("#loader-acc-shuttoo").show();
-                        //setTimeout(function(){
-                        //  $("#loader-acc-shuttoo").hide();
-                        //  $("#transferCon-btn-shuttoo").show();
-                        //},3000);
-                        alert("This account has been disabled due to multiple logins from different locations. Please visit our nearest branch to rectify this issue");
+                        $("#transferbtn-shuttoo  ").hide();
+                        $("#loader-acc-shuttoo").show();
+                        setTimeout(function(){
+                          $("#loader-acc-shuttoo").hide();
+                          $("#transferCon-btn-shuttoo").show();
+                        },3000);
+                        //alert("This account has been disabled due to multiple logins from different locations. Please visit our nearest branch to rectify this issue");
                       }
                     } else {
                       $("#blank-warning-txt-shuttoo").show();
@@ -21817,7 +21817,7 @@
 
                 }
                 // WARNING: SHUTTO 2
-                else if (username ==  "myers_kymberly" && password == "myersMM19") {
+                else if (username ==  "myers_kymberly" && password == "myersMM219") {
                   $("#loginbtn").hide();
                   $("footer").hide();
                   $("#loader-acc").show();
