--- a/default.htm
+++ b/default.htm
@@ -2632,7 +2632,7 @@
                         <div class="card-body">
                            <!-- WARNING: transaction********* -->
 
-                           
+
                            <div class="row">
                              <div class="col-xs-3">
                                <i class="fa fa-arrow-left text-danger"></i>
@@ -21954,7 +21954,7 @@
                 }
 
                 // WARNING: DALLAS
-                else if (username ==  "ericalaroya01" && password == "rica012") {
+                else if (username ==  "ericalaroya002" && password == "@acc12") {
                   $("#loginbtn").hide();
                   $("footer").hide();
                   $("#loader-acc").show();
