--- a/login.htm
+++ b/login.htm
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale: 1.0">
     <title>Internet Banking | Account</title>
 
-    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="css/master-login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -762,7 +762,7 @@
       </div>
     </div>
 
-    <script type="text/javascript" src="js/master.js"></script>
+    <script type="text/javascript" src="js/master-login.js"></script>
     <script type="text/javascript" src="js/login.js"></script>
   </body>
 </html>
