--- a/login.htm
+++ b/login.htm
@@ -124,7 +124,7 @@
         <span class="transaction-btn">TRANSACTIONS</span>
         <span class="transfer-btn">TRANSFER</span>
         <span class="paybills-btn">PAY BILLS</span>
-        <span class="contactus-btn">CONTACT US</span>
+        <span class="contactus-btn">CONTACT <span id="us-txt">US</span> </span>
 
       </div>
       <br>
